--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,12 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "*",
+                "input": "share-assets/icon",
+                "output": "assets"
+              }
             ],
             "styles": [
               "src/styles.scss"
