--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build:prod
+        run: npm run build
 
       - name: Deploy
         if: success()
