--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm run build
 
       - name: Show dists
-        run: sudo apt-get install tree -y && tree .
+        run: sudo apt-get install tree -y && tree dist
 
       - name: Deploy
         if: success()
