测试 Github Action

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,6 +7,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Init module
+        uses: git submodule init
+
+      - name: Update module
+        uses: git submodule update
+
+      - name: Install Dep
+        uses: sudo apt-get install tree -y
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -22,7 +31,7 @@ jobs:
         run: npm run build
 
       - name: Show dists
-        run: sudo apt-get install tree -y && tree dist
+        run: tree dist
 
       - name: Deploy
         if: success()
